reenabled regeneration program. needs to be tested, and it will also be tested against the prolate flakes to make sure the regeneration works right.
todos:
* extended abstract
* paper writing
- ddpar needs tsv export (for effective radii)
 - or is it ddoutput with a basic stat output (aeff, d, ...)?
- map wall
- add support for combining shape and voronoi data into same silo file
- flake images
 - early algorithm implementation for assimilating image depth fields
 - algorithms to determine fractal dimension
 - determine effective radii, aspect ratio and other parameters
 - back surface reconstruction algorithm
 - voronoi recombination algorithm
- radar assimilation
 - perform data linking and reclassification
 * ddscat runs for existing flakes
  - radar frequencies 3, 35.6, 94 GHz
  - spheroids, prolate, oblate, hex plates, bullet rosettes
  - 273, 263, 253, 243, 233 K
  - can first do restricted orientations
  + reenable regeneration program
  - fix / redo bad prolate runs
 - verify orientation model
 - implement orientation fitting code
  - test code and compare results at different frequencies
 - try to make the multi-frequency plot of dBz difference between frequency pairs vs fractal dimension
 - calculate fractal dimension for simple particles, and add calculation to standard stats
 - update stats to correctly do ar and other quantities
- tmatrix stuff
 - verify scaled aeff code
 - reimplement a tmatrix plugin
- voronoi
 - fix sa / v algorithms
 - reimplement as a plugin
- qhull
 - implement as a plugin


git-svn-id: file:///mnt/svn/rtmath@1499 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/related/rtmath_hdf5_cpp/CMakeLists.txt
+++ b/rtmath/related/rtmath_hdf5_cpp/CMakeLists.txt
@@ -25,7 +25,7 @@ FIND_PACKAGE(SZIP)
 #	message("${SZIP_LIBRARIES}")
 IF (DEFINED SZIP_LIBRARIES)
 	include_directories(${SZIP_INCLUDE_DIRS})
-		SET (h5libs ${h5libs} szip)
+		SET (h5libs ${h5libs} ${SZIP_LIBRARIES})
 ENDIF()
 
 
