Added tsv-ddoutput-stats.cpp. Allows stat output from ddscat runs (even empty ones). Useful in making sure that regenerated runs are correct before execution.
git-svn-id: file:///mnt/svn/rtmath@1500 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/tsv-export/CMakeLists.txt
+++ b/rtmath/plugins/tsv-export/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library (rtmath_plugin_tsv SHARED
 	tsv-ddoutput.cpp
 	tsv-ddoutput-iso.cpp
 	tsv-ddoutput-ori.cpp
+	tsv-ddoutput-stats.cpp
 	tsv-image-basicstats.cpp
 	tsv-sacr.cpp
 	tsv-shapestats.cpp
