rtmath internal pf support added. Need to get oriented plugin working, establish iso code plugin, and provide programs that use this data. Also need to make a stats converter to provide data.
git-svn-id: file:///mnt/svn/rtmath@1506 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/tmatrix/CMakeLists.txt
+++ b/rtmath/plugins/tmatrix/CMakeLists.txt
@@ -1,4 +1,5 @@
 include (common)
+include (commonRtmathApps)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
@@ -10,11 +11,9 @@ add_library (rtmath_plugin_tmatrix SHARED
 	plugin-tmatrix.h
 	)
 addlib(rtmath_plugin_tmatrix SHARED)
+include_directories("${CMAKE_CURRENT_BINARY_DIR}/../../rtmath")
 
-set_target_properties( rtmath_plugin_tmatrix PROPERTIES FOLDER "Plugins/Shapes")
+
 target_link_libraries(rtmath_plugin_tmatrix ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
-INSTALL(TARGETS rtmath_plugin_tmatrix 
-	LIBRARY DESTINATION ${INSTALL_PLUGIN_DIR} 
-	ARCHIVE DESTINATION ${INSTALL_PLUGIN_DIR} 
-	COMPONENT Plugins)
+addplugin(rtmath_plugin_tmatrix non_dda)
 
