Slowly converting the oneellip program to accept ddscat output files in addition to command-line run specifications. - Will use the tsv output plugin. - Command-line specification coded. - Need to write the ddoutput code. Will support hdf5 and raw directories. - Possible todo: eventual shapestats read? - Needs option to specify oriented or isotropic providers - Needs option to force a single provider. - Output needs the provider module name and iso/ori flag. - Add in R-G provider for standard spheres, Westbrook hexagons and the Hogan and Westbrook aggregates. - Basically everything in the run logic needs to be rewritten and checked.
Other stuff:
- Added spectral mm support in unit conversions.
- Better pf code.
- refract namespace still needs any implementation of refractive index specification.
- Shapestats could use a surface area implementation for the raw ddscat shape files.


git-svn-id: file:///mnt/svn/rtmath@1507 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -40,6 +40,7 @@ addappdir(image-basic ON)
 addappdir(liu-regenerate-runs ON)
 #addappdir(mie-onesphere ON)
 #addappdir(mie-slice ON)
+addappdir(oneellip ON)
 addappdir(orientation-ensembles ON)
 addappdir(orientation-output-table ON)
 addappdir(orientation-weights ON)
