Expanding arm_info to read and write database entries. arm_info modifications should be complete, so I just have to update the indexing app and create the plugin.
The plugin will use C psql only, not C++, to avoid having to build more dependencies.

Need to also create the database table structure. Will add code to create this table to the dll, and will save the sql definition in the rtmath code.

Small updates to the code elsewhere.


rtmath database interface

- plugin-based, and provides interfaces for looking up / indexing information
- flake information, some stats, run database, current runs and arm indexing information

arm indexing information
- stores all of arm_info
 - filename, site, subsite, product, stream, datalevel, lat, lon, alt
 - startTime, endTime, filesize, various hashes
- used in generating timelines of instrument availability, as well as for searching 
  which instrument files are available at a certain time and place
registry structure
- arm_info needs to provide a lookup function, returning all objects that match a given query:
 - subsite, time, data level (optional), instrument (optional)
- provide a saving function, to export an entry into the database
 - filename and hashes are unique and determine the index key

flake indexing information
- retrieve flake by hash
- categorize by flake type (ar_main, 200micron, ...), effective radius (optional), a 
  good / bad flag, and a few stats (ar, hull information, gate ingested)
registry structure
- querying function to return collections based on hashes, flake families, size ranges, 
  ar ranges and hull ranges

configuration table storage
- hash directory locations and priorities for general site
- frequency pairings
- default locations for some other files





git-svn-id: file:///mnt/svn/rtmath@1513 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/CMakeLists.txt
+++ b/rtmath/plugins/CMakeLists.txt
@@ -35,6 +35,11 @@ if (BUILD_PLUGINS)
 	if (BUILD_PLUGIN_NETCDF)
 		add_subdirectory (netcdf)
 	endif()
+	option (BUILD_PLUGIN_PSQL
+		"Build PostgreSQL IO plugin" ON)
+	if (BUILD_PLUGIN_PSQL)
+		add_subdirectory (psql)
+	endif()
 	option (BUILD_PLUGIN_ROOT
 		"Build ROOT plugin (io and plotting)" OFF)
 	if (BUILD_PLUGIN_ROOT)
