--- a/rtmath/rtmath/rtmath/cmake-settings.h.in
+++ b/rtmath/rtmath/rtmath/cmake-settings.h.in
@@ -9,6 +9,8 @@
 
 #define COMPRESS_SZIP @COMPRESS_SZIP@
 
+#define USE_RYAN_SERIALIZATION @USE_RYAN_SERIALIZATION_FLAG@
+
 #define RTMATH_MAJOR @MAJOR@
 #define RTMATH_MINOR @MINOR@
 #define RTMATH_REVISION @REVISION@
