Created a prototype of the search function. Needs basic testing before field extraction to arm_info objects. Need to implement insertion function.
Redid some of the plugin code to add database support and to make plugin handle casting easier.


git-svn-id: file:///mnt/svn/rtmath@1519 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/psql/CMakeLists.txt
+++ b/rtmath/plugins/psql/CMakeLists.txt
@@ -10,6 +10,8 @@ include_directories(${EIGEN3_INCLUDE_DIR})
 find_package(PostgreSQLrtmath REQUIRED)
 #message("Include ${psql_INCLUDE_DIRS}")
 include_directories(${PostgreSQL_INCLUDE_DIRS})
+include_directories("${CMAKE_CURRENT_BINARY_DIR}/../../rtmath")
+
 
 add_library (rtmath_plugin_psql SHARED 
 	#nc-arm_info.cpp
