netcdf plugin again builds. Need to modify all app configs to include the rtmath build directory to find cmake-settings.h. The netcdf plugin & hdf5 do not properly find the hdf5 folders. netcdf also adds a ridiculous zlib dependency that is not in the standard location.
git-svn-id: file:///mnt/svn/rtmath@1520 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/netcdf/CMakeLists.txt
+++ b/rtmath/plugins/netcdf/CMakeLists.txt
@@ -1,4 +1,5 @@
 include (common)
+include (commonRtmathApps)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
@@ -21,6 +22,7 @@ ENDIF()
 find_package(netcdf REQUIRED)
 #message("Include ${netcdf_INCLUDE_DIRS}")
 include_directories(${netcdf_INCLUDE_DIRS})
+include_directories("${CMAKE_CURRENT_BINARY_DIR}/../../rtmath")
 
 add_library (rtmath_plugin_netcdf SHARED 
 	nc-arm_info.cpp
@@ -30,15 +32,11 @@ add_library (rtmath_plugin_netcdf SHARED
 	)
 addlib(rtmath_plugin_netcdf SHARED)
 
-set_target_properties( rtmath_plugin_netcdf PROPERTIES FOLDER "Plugins/RT")
 target_link_libraries(rtmath_plugin_netcdf 
 	${rtmath_data-libs} 
 	rtmath_core 
 	rtmath_voronoi
 	rtmath_data
 	netcdf)
-INSTALL(TARGETS rtmath_plugin_netcdf 
-	LIBRARY DESTINATION ${INSTALL_PLUGIN_DIR} 
-	ARCHIVE DESTINATION ${INSTALL_PLUGIN_DIR} 
-	COMPONENT Plugins)
+addplugin(rtmath_plugin_netcdf io)
 
