Adding the arm_coverage program, but there may not be much for it to do. I can implement time period merging in sql.
git-svn-id: file:///mnt/svn/rtmath@1533 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -17,6 +17,7 @@ endmacro(addappdir appname appdefault)
 
 #add_subdirectory (absorb-slab)
 #add_subdirectory (atmosplot)
+addappdir(arm-coverage ON)
 addappdir(arm-info ON)
 addappdir(arm-sacr ON)
 addappdir(combo ON)
