--- a/rtmath/rtmath-apps/arm-info/CMakeLists.txt
+++ b/rtmath/rtmath-apps/arm-info/CMakeLists.txt
@@ -8,11 +8,9 @@ add_executable (rtmath-arm-info main.cpp)
 target_link_libraries(rtmath-arm-info ${rtmath_data-libs} rtmath_core rtmath_data)
 addapp(rtmath-arm-info Data)
 
-#if (BUILD_PLUGIN_IMAGEMAGICK)
-#	add_dependencies ( rtmath-arm-info rtmath_plugin_ImageMagick)
-#endif()
-
-# Add a database plugin dependency, too...
+if (BUILD_PLUGIN_PSQL)
+	add_dependencies ( rtmath-arm-info rtmath_plugin_psql)
+endif()
 if (BUILD_PLUGIN_NETCDF)
 	add_dependencies ( rtmath-arm-info rtmath_plugin_netcdf)
 endif()
