Added shapefile typical dipole spacing field.
psql plugin added querying for shapes. Need to implement shape insert and update (unlike with indexing arm files). Then, update the rtmath-shape logic and process the flakes.


git-svn-id: file:///mnt/svn/rtmath@1539 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/psql/CMakeLists.txt
+++ b/rtmath/plugins/psql/CMakeLists.txt
@@ -26,7 +26,7 @@ add_library (rtmath_plugin_psql SHARED
 	plugin-psql.cpp
 	plugin-psql.h
 	psql-arm-info.cpp
-
+	psql-shapefile.cpp
 	${sql_files}
 	)
 addlib(rtmath_plugin_psql SHARED)
