Fixed std / boost shared_ptr confusion. arm-info builds again. So does rtmath-shape, but the final logic to enable shape lookups has not yet been written. Need to support: - lookup by hash - selection of all flakes in a certain superset (oblate_small, ...)
After this:
- add logic to record runs in database, and regenerate the hdf5 files for the runs.
- remove vtk bindings and put in a plugin
- fix tmatrix



git-svn-id: file:///mnt/svn/rtmath@1541 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/psql/CMakeLists.txt
+++ b/rtmath/plugins/psql/CMakeLists.txt
@@ -30,13 +30,14 @@ add_library (rtmath_plugin_psql SHARED
 	${sql_files}
 	)
 addlib(rtmath_plugin_psql SHARED)
-#message("${PostgreSQL_INCLUDE_DIRS} Libs ${PostgreSQL_LIBRARIES}")
+#message("${PostgreSQL_INCLUDE_DIRS} Libs ${PostgreSQL_LIBRARIES} ${PostgreSQL_LIBRARY}")
 
 target_link_libraries(rtmath_plugin_psql 
 	${rtmath_data-libs} 
 	rtmath_core 
 	rtmath_voronoi
 	rtmath_data
-	${PostgreSQL_LIBRARIES})
+	rtmath_ddscat
+	${PostgreSQL_LIBRARY})
 addplugin(rtmath_plugin_psql RT)
 
