database queries and writes seem to work, in addition to adding tags. haven't tested all of the querying options quite yet, but the important ones do work.
git-svn-id: file:///mnt/svn/rtmath@1544 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/shape/CMakeLists.txt
+++ b/rtmath/rtmath-apps/shape/CMakeLists.txt
@@ -11,7 +11,9 @@ endif()
 if (BUILD_PLUGIN_HDF5)
 	add_dependencies ( rtmath-shape rtmath_plugin_hdf5)
 endif()
-
+if (BUILD_PLUGIN_PSQL)
+	add_dependencies ( rtmath-shape rtmath_plugin_psql)
+endif()
 
 
 
