git-svn-id: file:///mnt/svn/rtmath@1550 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/CMakeLists.txt
+++ b/rtmath/plugins/CMakeLists.txt
@@ -60,5 +60,10 @@ if (BUILD_PLUGINS)
 	if (BUILD_PLUGIN_TSV)
 		add_subdirectory(tsv-export)
 	endif()
+	option (BUILD_PLUGIN_VTK
+		"Build VTK plugin. Used in hull calculation, image processing and visualization." ON)
+	if (BUILD_PLUGIN_VTK)
+		add_subdirectory(vtk)
+	endif()
 endif()
 
