--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -172,9 +172,9 @@ storebin(rtmath_core)
 
 find_package(Voro REQUIRED)
 include_directories(${VORO_INCLUDE_DIRS})
-find_package(VTK REQUIRED)
-include(${VTK_USE_FILE})
-include_directories(BEFORE ${VTK_INCLUDE_DIRS})
+#find_package(VTK REQUIRED)
+#include(${VTK_USE_FILE})
+#include_directories(BEFORE ${VTK_INCLUDE_DIRS})
 #find_package(Qhull REQUIRED)
 #include_directories(${QHULL_INCLUDE_DIRS})
 
