git-svn-id: file:///mnt/svn/rtmath@1552 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -170,8 +170,8 @@ storebin(rtmath_core)
 
 
 
-find_package(Voro REQUIRED)
-include_directories(${VORO_INCLUDE_DIRS})
+#find_package(Voro REQUIRED)
+#include_directories(${VORO_INCLUDE_DIRS})
 #find_package(VTK REQUIRED)
 #include(${VTK_USE_FILE})
 #include_directories(BEFORE ${VTK_INCLUDE_DIRS})
