--- a/rtmath/plugins/CMakeLists.txt
+++ b/rtmath/plugins/CMakeLists.txt
@@ -60,6 +60,11 @@ if (BUILD_PLUGINS)
 	if (BUILD_PLUGIN_TSV)
 		add_subdirectory(tsv-export)
 	endif()
+	option (BUILD_PLUGIN_VORO
+		"Build VORO++ plugin. Used in Voronoi diagram." ON)
+	if (BUILD_PLUGIN_VORO)
+		add_subdirectory(voro)
+	endif()
 	option (BUILD_PLUGIN_VTK
 		"Build VTK plugin. Used in hull calculation, image processing and visualization." ON)
 	if (BUILD_PLUGIN_VTK)
