--- a/rtmath/plugins/ImageMagick/CMakeLists.txt
+++ b/rtmath/plugins/ImageMagick/CMakeLists.txt
@@ -1,4 +1,5 @@
 include (common)
+include (commonRtmathApps)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
@@ -13,7 +14,6 @@ add_library (rtmath_plugin_ImageMagick SHARED
 	)
 addlib(rtmath_plugin_ImageMagick SHARED)
 
-set_target_properties( rtmath_plugin_ImageMagick PROPERTIES FOLDER "Plugins/Shapes")
 target_link_libraries(rtmath_plugin_ImageMagick 
 	${rtmath_ddscat-libs} 
 	rtmath_core 
@@ -21,8 +21,6 @@ target_link_libraries(rtmath_plugin_ImageMagick
 	rtmath_images
 	${rtmath_images-libs}
 	${ImageMagick_LIBRARIES})
-INSTALL(TARGETS rtmath_plugin_ImageMagick 
-	LIBRARY DESTINATION ${INSTALL_PLUGIN_DIR} 
-	ARCHIVE DESTINATION ${INSTALL_PLUGIN_DIR} 
-	COMPONENT Plugins)
+addplugin(rtmath_plugin_ImageMagick Shapes)
+
 
