Modified programs to patch ddscat runs involving effective medium approximations of flakes. Was starting to extend vtk plugin to write vtk files (easier to process than silo files), but I have enought to do right now so it's on hold. May finish next week to show specific orientations of flakes.
git-svn-id: file:///mnt/svn/rtmath@1573 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/ddscat-ddpar/CMakeLists.txt
+++ b/rtmath/rtmath-apps/ddscat-ddpar/CMakeLists.txt
@@ -2,7 +2,7 @@ include (common)
 include (commonRtmathApps)
 
 add_executable (rtmath-ddscat-ddpar main.cpp)
-target_link_libraries(rtmath-ddscat-ddpar ${rtmath_ddscat_base-libs} rtmath_core rtmath_ddscat_base)
+target_link_libraries(rtmath-ddscat-ddpar ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
 addapp(rtmath-ddscat-ddpar Analysis)
 
 
