--- a/rtmath/rtmath-apps/getm/CMakeLists.txt
+++ b/rtmath/rtmath-apps/getm/CMakeLists.txt
@@ -3,6 +3,6 @@ include (commonRtmathApps)
 
 add_executable (rtmath-getm getm.cpp)
 addapp( rtmath-getm Analysis)
-target_link_libraries(rtmath-getm ${rtmath_ddscat_base-libs} rtmath_core rtmath_ddscat_base)
+target_link_libraries(rtmath-getm ${rtmath_ddscat-libs} rtmath_core rtmath_ddscat)
 
 
