--- a/rtmath/plugins/vtk/CMakeLists.txt
+++ b/rtmath/plugins/vtk/CMakeLists.txt
@@ -14,6 +14,7 @@ include(${VTK_USE_FILE})
 add_library (rtmath_plugin_vtk SHARED 
 	plugin-vtk.cpp
 	plugin-vtk.h
+	vtk-shapefile.cpp
 	vtk-hulls.cpp
 	)
 addlib(rtmath_plugin_vtk SHARED)
