--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -52,11 +52,12 @@ addappdir(radar-relations ON)
 addappdir(rpline ON)
 addappdir(rtmath-version ON)
 addappdir(shape ON)
-addappdir(shape-extract ON)
+addappdir(shape-depth-info ON)
+addappdir(shape-extract OFF)
 addappdir(shape-hash ON)
 addappdir(shape-hull ON)
 addappdir(shape-perturb-interior ON)
-addappdir(shape-rehash ON)
+addappdir(shape-rehash OFF)
 addappdir(stats ON)
 #addappdir(tmatrix-ddscat-extract ON)
 #addappdir(tmatrix-oneellip ON)
