Adding psql ddOutput storage code. Needed to make my life easier when extracting runs.
git-svn-id: file:///mnt/svn/rtmath@1580 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/psql/CMakeLists.txt
+++ b/rtmath/plugins/psql/CMakeLists.txt
@@ -26,6 +26,7 @@ add_library (rtmath_plugin_psql SHARED
 	plugin-psql.cpp
 	plugin-psql.h
 	psql-arm-info.cpp
+	psql-ddOutput.cpp
 	psql-shapefile.cpp
 	${sql_files}
 	)
