git-svn-id: file:///mnt/svn/rtmath@1581 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/vtk/CMakeLists.txt
+++ b/rtmath/plugins/vtk/CMakeLists.txt
@@ -16,7 +16,7 @@ include(${VTK_USE_FILE})
 add_library (rtmath_plugin_vtk SHARED 
 	plugin-vtk.cpp
 	plugin-vtk.h
-	vtk-shapefile.cpp
+	#vtk-shapefile.cpp
 	vtk-hulls.cpp
 	)
 addlib(rtmath_plugin_vtk SHARED)
