--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -32,6 +32,7 @@ addappdir(ddscat-output-extract-orientations ON)
 addappdir(ddscat-output-ingest ON)
 addappdir(ddscat-postprocess ON)
 addappdir(ddscat-regenerate-run ON)
+addappdir(ddscat-regenerate-run-db ON)
 addappdir(ddscat-test ON)
 addappdir(expand-shorthand ON)
 addappdir(getm ON)
