--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -17,23 +17,23 @@ endmacro(addappdir appname appdefault)
 
 #add_subdirectory (absorb-slab)
 #add_subdirectory (atmosplot)
-addappdir(arm-coverage ON)
+addappdir(arm-coverage OFF)
 addappdir(arm-info ON)
-addappdir(arm-sacr ON)
+addappdir(arm-sacr OFF)
 addappdir(combo ON)
 addappdir(comborows ON)
 addappdir(conv-units ON)
-addappdir(ddscat-data ON)
+addappdir(ddscat-data OFF)
 addappdir(ddscat-ddpar ON)
-addappdir(ddscat-generate-ellipsoid ON)
+addappdir(ddscat-generate-ellipsoid OFF)
 addappdir(ddscat-output ON)
-addappdir(ddscat-output-extract ON)
-addappdir(ddscat-output-extract-orientations ON)
+addappdir(ddscat-output-extract OFF)
+addappdir(ddscat-output-extract-orientations OFF)
 addappdir(ddscat-output-ingest ON)
 addappdir(ddscat-postprocess ON)
 addappdir(ddscat-regenerate-run ON)
 addappdir(ddscat-regenerate-run-db ON)
-addappdir(ddscat-test ON)
+addappdir(ddscat-test OFF)
 addappdir(expand-shorthand ON)
 addappdir(getm ON)
 addappdir(guess-temp ON)
@@ -49,13 +49,13 @@ addappdir(orientation-weights-1d ON)
 addappdir(orientation-weights-3d ON)
 addappdir(orientation-weights-3d-random ON)
 addappdir(orientation-weights-ddscat ON)
-addappdir(radar-relations ON)
+addappdir(radar-relations OFF)
 addappdir(rpline ON)
 addappdir(rtmath-version ON)
 addappdir(shape ON)
 addappdir(shape-depth-info ON)
 addappdir(shape-extract OFF)
-addappdir(shape-hash ON)
+addappdir(shape-hash OFF)
 addappdir(shape-hull ON)
 addappdir(shape-perturb-interior ON)
 addappdir(shape-rehash OFF)
