git-svn-id: file:///mnt/svn/rtmath@1596 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -30,7 +30,7 @@ addappdir(ddscat-output ON)
 addappdir(ddscat-output-extract OFF)
 addappdir(ddscat-output-extract-orientations OFF)
 addappdir(ddscat-output-ingest ON)
-addappdir(ddscat-postprocess ON)
+addappdir(ddscat-postprocess OFF)
 addappdir(ddscat-regenerate-run ON)
 addappdir(ddscat-regenerate-run-db ON)
 addappdir(ddscat-test OFF)
