git-svn-id: file:///mnt/svn/rtmath@1597 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -42,13 +42,13 @@ addappdir(liu-regenerate-runs ON)
 #addappdir(mie-onesphere ON)
 #addappdir(mie-slice ON)
 addappdir(oneellip ON)
-addappdir(orientation-ensembles ON)
-addappdir(orientation-output-table ON)
-addappdir(orientation-weights ON)
-addappdir(orientation-weights-1d ON)
-addappdir(orientation-weights-3d ON)
-addappdir(orientation-weights-3d-random ON)
-addappdir(orientation-weights-ddscat ON)
+addappdir(orientation-ensembles OFF)
+addappdir(orientation-output-table OFF)
+addappdir(orientation-weights OFF)
+addappdir(orientation-weights-1d OFF)
+addappdir(orientation-weights-3d OFF)
+addappdir(orientation-weights-3d-random OFF)
+addappdir(orientation-weights-ddscat OFF)
 addappdir(radar-relations OFF)
 addappdir(rpline ON)
 addappdir(rtmath-version ON)
