git-svn-id: file:///mnt/svn/rtmath@1598 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -37,8 +37,8 @@ addappdir(ddscat-test OFF)
 addappdir(expand-shorthand ON)
 addappdir(getm ON)
 addappdir(guess-temp ON)
-addappdir(image-basic ON)
-addappdir(liu-regenerate-runs ON)
+addappdir(image-basic OFF)
+addappdir(liu-regenerate-runs OFF)
 #addappdir(mie-onesphere ON)
 #addappdir(mie-slice ON)
 addappdir(oneellip ON)
