--- a/rtmath/rtmath/data/rtmath.conf
+++ b/rtmath/rtmath/data/rtmath.conf
@@ -28,17 +28,18 @@
  <freqs>
   Set_A 10:1:130
   Set_B 130:1:250
-  GPM_Dual_Radar 13.6, 35.5
-  GPM_Radiometer 10.7, 18.7, 23.8, 89.0, 165.5, 183.3
-  ARM_Radars 9.5, 35.6, 94, 95, 183
+  GPM_Dual_Radar 13.6,35.5
+  GPM_Radiometer 10.7,18.7,23.8,89.0,165.5,183.3
+  ARM_Radars 9.5,35,95,183
   CloudSat 94
-  AMSU_A 23.8, 31.4, 50.3, 52.8, 53.596, 54.4, 54.94, 55.5, 57.290, 89.0
-  AMSU_B 89.9, 150, 183.31
+  AMSU_A 23.8,31.4,50.3,52.8,53.596,54.4,54.94,55.5,57.290,89.0
+  AMSU_B 89.9,150,183.31
  </freqs>
  <hash>
-  shapeDir /sat/rhoneyager/flakes/hashed/raw
-  statsDir /sat/rhoneyager/flakes/hashed/stats
-  runsDir /sat/rhoneyager/flakes/hashed/runs
+  hashDir /sat/rhoneyager/DDSCAT_runs/hashed
+  shapeDir /sat/rhoneyager/DDSCAT_runs/hashed
+  statsDir /sat/rhoneyager/DDSCAT_runs/hashed
+  runsDir /sat/rhoneyager/DDSCAT_runs
  </hash>
 </ddscat>
 
