git-svn-id: file:///mnt/svn/rtmath@1599 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -56,7 +56,7 @@ addappdir(shape ON)
 addappdir(shape-depth-info ON)
 addappdir(shape-extract OFF)
 addappdir(shape-hash OFF)
-addappdir(shape-hull ON)
+addappdir(shape-hull OFF)
 addappdir(shape-perturb-interior ON)
 addappdir(shape-rehash OFF)
 addappdir(stats ON)
