Added ncurses ingest application. It can read the files, but does not yet perform the ingest.
git-svn-id: file:///mnt/svn/rtmath@1609 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -27,9 +27,10 @@ addappdir(ddscat-data OFF)
 addappdir(ddscat-ddpar ON)
 addappdir(ddscat-generate-ellipsoid OFF)
 addappdir(ddscat-output ON)
-addappdir(ddscat-output-extract OFF)
-addappdir(ddscat-output-extract-orientations OFF)
-addappdir(ddscat-output-ingest ON)
+#addappdir(ddscat-output-extract OFF)
+#addappdir(ddscat-output-extract-orientations OFF)
+addappdir(ddscat-output-ingest OFF)
+addappdir(ddscat-output-ingest-ncurses OFF)
 addappdir(ddscat-postprocess OFF)
 addappdir(ddscat-regenerate-run ON)
 addappdir(ddscat-regenerate-run-db ON)
