git-svn-id: file:///mnt/svn/rtmath@1613 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/tsv-export/CMakeLists.txt
+++ b/rtmath/plugins/tsv-export/CMakeLists.txt
@@ -12,6 +12,7 @@ add_library (rtmath_plugin_tsv SHARED
 	tsv-ddoutput-stats.cpp
 	tsv-image-basicstats.cpp
 	tsv-sacr.cpp
+	#tsv-shapefile.cpp
 	tsv-shapestats.cpp
 	tsv-shapestats-rotdata.cpp
 	tsv-shapestats-voro.cpp
