Added shape_match_parent program. Also added shapefile map export code.
git-svn-id: file:///mnt/svn/rtmath@1614 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -58,6 +58,7 @@ addappdir(shape-depth-info ON)
 addappdir(shape-extract OFF)
 addappdir(shape-hash OFF)
 addappdir(shape-hull OFF)
+addappdir(shape-match-parent OFF)
 addappdir(shape-perturb-interior ON)
 addappdir(shape-rehash OFF)
 addappdir(stats ON)
