Added tsv-ddoutput-iso-small.cpp, allowing extraction without stats. Used with derived flakes.
git-svn-id: file:///mnt/svn/rtmath@1620 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/tsv-export/CMakeLists.txt
+++ b/rtmath/plugins/tsv-export/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library (rtmath_plugin_tsv SHARED
 	plugin-tsv.h
 	tsv-ddoutput.cpp
 	tsv-ddoutput-iso.cpp
+	tsv-ddoutput-iso-small.cpp
 	tsv-ddoutput-ori.cpp
 	tsv-ddoutput-stats.cpp
 	tsv-image-basicstats.cpp
