--- a/rtmath/rtmath/data/rtmath.conf
+++ b/rtmath/rtmath/data/rtmath.conf
@@ -35,11 +35,17 @@
   AMSU_A 23.8,31.4,50.3,52.8,53.596,54.4,54.94,55.5,57.290,89.0
   AMSU_B 89.9,150,183.31
  </freqs>
- <hash>
-  hashDir /sat/rhoneyager/DDSCAT_runs/hashed
-  shapeDir /sat/rhoneyager/DDSCAT_runs/hashed
-  statsDir /sat/rhoneyager/DDSCAT_runs/hashed
-  runsDir /sat/rhoneyager/DDSCAT_runs
- </hash>
+ <hashes>
+  <store>
+   priority 200
+   path /smb/stratus/Users/rhoneyager/DDSCAT_runs/hashed
+   writable 0
+  </store>
+  <store>
+   priority 300
+   path /sat/rhoneyager/DDSCAT_runs/hashed
+   writable 1
+  </store>
+ </hashes>
 </ddscat>
 
