--- a/rtmath/rtmath-apps/oneellip/CMakeLists.txt
+++ b/rtmath/rtmath-apps/oneellip/CMakeLists.txt
@@ -18,7 +18,9 @@ endif()
 if (BUILD_PLUGIN_MIE)
 	add_dependencies ( rtmath-oneellip rtmath_plugin_mie)
 endif()
-
+if (BUILD_PLUGIN_NONDDA_MISC)
+	add_dependencies ( rtmath-oneellip rtmath_plugin_nondda_misc)
+endif()
 if (BUILD_PLUGIN_TMATRIX)
 	add_dependencies ( rtmath-oneellip rtmath_plugin_tmatrix)
 endif()
