Starting to implement 2d voronoi plugin. A 2d diagram is needed for each principal orientation (x,y,z) for future ar and vf comparisons. voro2d plugin added, but code is not yet specialized. The rtmath_Voronoi code is partly modified. Needs io support.
Also need to modify shape stats to calculate diagram, and io support to store the diagram.


git-svn-id: file:///mnt/svn/rtmath@1634 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/CMakeLists.txt
+++ b/rtmath/plugins/CMakeLists.txt
@@ -77,9 +77,14 @@ if (BUILD_PLUGINS)
 		add_subdirectory(tsv-export)
 	endif()
 	option (BUILD_PLUGIN_VORO
-		"Build VORO++ plugin. Used in Voronoi diagram." ON)
+		"Build VORO++ 3d plugin. Used in Voronoi diagram." ON)
 	if (BUILD_PLUGIN_VORO)
 		add_subdirectory(voro)
+	endif()
+	option (BUILD_PLUGIN_VORO2D
+		"Build VORO++ 2d plugin. Used in stats." ON)
+	if (BUILD_PLUGIN_VORO2D)
+		add_subdirectory(voro2d)
 	endif()
 	option (BUILD_PLUGIN_VTK
 		"Build VTK plugin. Used in hull calculation, image processing and visualization." ON)
