Added the postdoc dielectrics. Added other person's linear interpolation template code.
Need to check mg spheres.


git-svn-id: file:///mnt/svn/rtmath@1654 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -130,6 +130,11 @@ endif()
 addBoostUniform(${boost_uniform_libs})
 include_directories(BEFORE SYSTEM ${Boost_INCLUDE_DIR})
 link_directories(${Boost_LIBRARY_DIR})
+
+# linterp is in the related directory
+include_directories(BEFORE "${CMAKE_SOURCE_DIR}/related/linterp/rncarpio-linterp-ca556a0/src")
+
+
 if(WIN32 AND NOT CYGWIN)
 	set(rtmath_core-libs "")
 else()
