Improving the build system so thai I don't have to manually specify bzip2, zlib and eigen paths on windows. imagemagick plugin builds again. tested pure msvc2013 build, and it works.
git-svn-id: file:///mnt/svn/rtmath@1663 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/CMakeLists.txt
+++ b/rtmath/CMakeLists.txt
@@ -91,6 +91,12 @@ add_definitions(-DWITH_CMAKE)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
 
+if(NOT ZLIB_INCLUDE_DIR)
+	if (DEFINED ENV{ZLIB_ROOT})
+		set(ZLIB_ROOT $ENV{ZLIB_ROOT})
+	ENDIF()
+endif()
+
 # Set a uniform output directory (to make app debugs easier)
 #set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_Debug ${CMAKE_BINARY_DIR}/Debug)
 #set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_Release ${CMAKE_BINARY_DIR}/Release)
