--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -63,12 +63,12 @@ if (NOT BZIP2_INCLUDE_DIR)
 			CACHE PATH "BZip2 Include directory" FORCE)
 	endif()
 	if (DEFINED ENV{BZIP2_LIBRARY_DEBUG})
-		#set(BZIP2_LIBRARY_DEBUG $ENV{BZIP2_LIBRARY_DEBUG}
-		#	CACHE FILEPATH "BZip2 Debug library path" FORCE)
+		set(BZIP2_LIBRARY_DEBUG $ENV{BZIP2_LIBRARY_DEBUG}
+			CACHE FILEPATH "BZip2 Debug library path" FORCE)
 	endif()
 	if (DEFINED ENV{BZIP2_LIBRARY_RELEASE})
-		#set(BZIP2_LIBRARY_RELEASE $ENV{BZIP2_LIBRARY_RELEASE}
-		#	CACHE FILEPATH "BZip2 Release library path" FORCE)
+		set(BZIP2_LIBRARY_RELEASE $ENV{BZIP2_LIBRARY_RELEASE}
+			CACHE FILEPATH "BZip2 Release library path" FORCE)
 	endif()
 	if (DEFINED ENV{BZIP2_LIBRARIES})
 		set(BZIP2_LIBRARIES $ENV{BZIP2_LIBRARIES}
@@ -76,6 +76,13 @@ if (NOT BZIP2_INCLUDE_DIR)
 		mark_as_advanced(BZIP2_LIBRARIES)
 	endif()
 	find_package(BZip2)
+endif()
+
+
+if(NOT ZLIB_INCLUDE_DIR)
+	if (DEFINED ENV{ZLIB_ROOT})
+		set(ZLIB_ROOT $ENV{ZLIB_ROOT})
+	ENDIF()
 endif()
 find_package(ZLIB)
 
