Adding oneellip-parallel. Code will be used to remind me how to program with ICE.
git-svn-id: file:///mnt/svn/rtmath@1672 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/rtmath-apps/CMakeLists.txt
+++ b/rtmath/rtmath-apps/CMakeLists.txt
@@ -43,6 +43,7 @@ addappdir(liu-regenerate-runs OFF)
 #addappdir(mie-onesphere ON)
 #addappdir(mie-slice ON)
 addappdir(oneellip ON)
+addappdir(oneellip-parallel ON)
 addappdir(orientation-ensembles OFF)
 addappdir(orientation-output-table OFF)
 addappdir(orientation-weights OFF)
