Fixed new directory bugs, using the proper Vista+ function.
git-svn-id: file:///mnt/svn/ryan-debug@79 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/apps/Debug-test/CMakeLists.txt
+++ b/apps/Debug-test/CMakeLists.txt
@@ -1,6 +1,7 @@
 include (SVNinfo)
 include (signing)
 include (addconfiginfo)
+include (addlib)
 
 configure_file(test.rc.in
 	"${CMAKE_CURRENT_BINARY_DIR}/test.rc" @ONLY)
@@ -25,5 +26,5 @@ INSTALL(TARGETS Ryan_Debug-test
 	RUNTIME DESTINATION ${INSTALL_CMAKE_DIR}/${REL_BIN_DIR}/bin${configappend}
 	COMPONENT Applications
 	)
-
+storebin(Ryan_Debug-test)
 
