Fixing code so that it compiles in gcc 4.9.2. Lots of added functions. Now has an error system, which currently handles all of splitset. Added splitset app. Need to expand error system to also cover main os_functions.cpp code. Now can search by a particular environment variable.
git-svn-id: file:///mnt/svn/ryan-debug@80 1f4cd2ca-bd95-4731-83df-565e53d4a655

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,14 +58,20 @@ include_directories(BEFORE SYSTEM ${Boost_INCLUDE_DIR})
 link_directories(${Boost_LIBRARY_DIR})
 
 set( srcs
+	src/error.cpp
+	src/fs.cpp
 	src/modules.cpp
 	src/os_functions.cpp
+	src/splitSet.cpp
 	)
 set (hdrs
 	Ryan_Debug/defs.h
 	Ryan_Debug/debug.h
+	Ryan_Debug/error.h
+	Ryan_Debug/fs.h
 	Ryan_Debug/info.h
 	Ryan_Debug/modules.h
+	Ryan_Debug/splitSet.h
 	src/internal.h
 	${CMAKE_CURRENT_BINARY_DIR}/debug_subversion.h
 	)
