git-svn-id: file:///mnt/svn/rtmath@1677 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/CMakeLists.txt
+++ b/rtmath/plugins/CMakeLists.txt
@@ -1,11 +1,11 @@
 # Build the apps
 include_directories(BEFORE SYSTEM ${Boost_INCLUDE_DIR})
 find_package(Ryan_Debug REQUIRED)
-find_package(Ryan_Serialization REQUIRED)
+#find_package(Ryan_Serialization REQUIRED)
 find_package(Eigen3 REQUIRED)
 include_directories(EIGEN3_INCLUDE_DIR)
 include_directories(${RYAN_DEBUG_INCLUDE_DIRS})
-include_directories(${RYAN_SERIALIZATION_INCLUDE_DIRS})
+#include_directories(${RYAN_SERIALIZATION_INCLUDE_DIRS})
 
 option (BUILD_PLUGINS
 	"Master switch to enable / disable building of plugins" ON)
