--- a/rtmath/rtmath/CMakeLists.txt
+++ b/rtmath/rtmath/CMakeLists.txt
@@ -149,7 +149,7 @@ else()
 	set (rtmath_core-libs ${Boost_FILESYSTEM_LIBRARY}
 		${Boost_IOSTREAMS_LIBRARY} ${Boost_SYSTEM_LIBRARY} ${Boost_REGEX_LIBRARY}
 		${Boost_PROGRAM_OPTIONS_LIBRARY} ${Boost_DATE_TIME_LIBRARY}
-		${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY}
+		${Boost_LOG_LIBRARY} ${Boost_LOG_SETUP_LIBRARY} pthread
 		)
 	if (USE_RYAN_SERIALIZATION)
 		set (rtmath_core-libs ${rtmath_core-libs} ${Boost_SERIALIZATION_LIBRARY})
