Overhauled error system.
git-svn-id: file:///mnt/svn/rtmath@1680 1d52797c-35fc-48e8-8e80-2db72aa187e2

--- a/rtmath/plugins/bhmie/CMakeLists.txt
+++ b/rtmath/plugins/bhmie/CMakeLists.txt
@@ -2,6 +2,7 @@ include (common)
 include (commonRtmathApps)
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIR})
+find_package(Ryan_Debug REQUIRED)
 
 
 add_subdirectory (../../related/bhmie "${CMAKE_CURRENT_BINARY_DIR}/rtmath_bhmie")
